# PTPlot

./: .gitignore  AUTHORS  CITATION.cff  LICENSE  MANIFEST.in  NOTE  README.md  README.rst  SNR_Ubarf_Rstar_read.py  SNR_Ubarf_Rstar_write.py  Sens_L6A5M5N2P2D40.txt  codemeta.json  curves.py  demo.py  espinosa.py  index.html  main.py  manage.py  powerspectrum.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.py  test.py
.github/workflows/: deploy-docker.yml  deploy-pypi.yml  docs.yml  main.yml
doc/: ptplot_technote.tex
docs/: conf.py  index.rst  requirements.txt
old/: SNR.py  index.html  snr_L6A2M5N2P2D28_precomputed.npz
ptplot/: apps.py  forms.py  urls.py  views.py
ptplot-django/: LICENSE  MANIFEST.in  README.rst  setup.py
ptplot-django/ptplot/: SNR.py  SNR_precompute.py  eLISATools.py  forms.py  models.py  powerspectrum.py  urls.py  views.py
ptplot-django/ptplot/management/commands/: BenchmarksGaugedLeptonNumber.csv  datapoints_DarkPhoton.csv  forDavidTn50.txt  josemi_2hdm.txt  josemi_2hdm_set2.txt  miki_singlet_portal.txt  populate.py  susy_points.txt
ptplot-django/ptplot/science/: SNR.py  SNR_precompute.py  SNRalphabeta.py  SNRalphabeta_onthefly.py  SNRubarfrstar_onthefly.py  ScienceRequirements.txt  ScienceRequirementsLite.txt  ScienceRequirements_Tn_100.0_gstar_100.0_precomputed.npz  Sens_L6A2M5N2P2D28.txt  Sens_L6A2M5N2P2D28_Lite.txt  Sens_L6A2M5N2P2D28_Tn_100.0_gstar_100.0_precomputed.npz  Sens_L6A2M5N2P2D28_Tn_200.0_hstar_100.0_precomputed.npz  curves.py  espinosa.py  powerspectrum.py  precomputed.py  sciencerequirements.py  snr.py
ptplot-django/ptplot/science/sensitivity/: ScienceRequirements.txt  Sens_L6A2M5N2P2D28_Lite.txt
ptplot-django/ptplot/static/ptplot/: default.css  ptplot.css
ptplot-django/ptplot/templates/ptplot/: base.html  index.html  model_detail.html  model_detail_plot.html  model_point_plot.html  model_scenario_plot.html  models.html  multiple.html  parameterchoice.html  ptplot.html  ptplotresult.html  single.html  single_result.html  single_result_ps.html  theories.html  theory_detail.html  theory_detail_plot.html  theory_point_plot.html  theory_scenario_plot.html
ptplot/management/commands/: datapoints_TwoRealScalarSinglets.csv  forDavidTn100.txt  populate.py  susy_points.txt
ptplot/science/: SNR_precompute.py  SNRalphabeta_onthefly.py  SNRubarfrstar_onthefly.py  calculate_powerspectrum.py  curves.py  espinosa.py  plot_powerspectrum.py  powerspectrum.py  precomputed.py  snr.py
ptplot/static/ptplot/: default.css  ptplot.css
ptplot/templates/ptplot/: base.html  index.html  model_detail.html  model_detail_plot.html  model_point_plot.html  model_scenario_plot.html  models.html  multiple.html  single_result.html
ptplot/tests/: test_science.py
ptplot_site/: asgi.py  settings.py  urls.py  wsgi.py
ptplot_site/settings/: base.py  dev.py  prod.py
tools/downloader/: README.md  clean2.py  download_LISA_figures.sh  get.sh  remove_watermark_old.py
